# Lissajous_plugin

./: .cmake-format-config.json  .gitignore  .gitmodules  CMakeLists.txt  README.md  clang-format.txt
src/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginUtilities.h
